syntax = "proto3";

package video;

option go_package = "./pb";

// douyin_publish_action_request 视频上传请求
message douyin_publish_action_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
  bytes data = 3; // 视频数据
}

// douyin_publish_action_response 视频上传响应
message douyin_publish_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

// douyin_feed_request 视频流请求
message douyin_feed_request {
  int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
}

// douyin_feed_response 视频流响应
message douyin_feed_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 视频列表
  int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time}
}

// Video 视频详情
message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
}

// User 用户详情
message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
}

// VideoModule 视频服务
service VideoModule {
  // VideoPublish 视频上传
  rpc VideoPublish(douyin_publish_action_request) returns (douyin_publish_action_response);
  // VideoFeed 视频流返回
  rpc VideoFeed(douyin_feed_request) returns (douyin_feed_response);
}